--- a/src/common/styles/common.scss
+++ b/src/common/styles/common.scss
@@ -55,10 +55,19 @@ button::after {
     }
 }
 
+.high-contrast-theme {
+    .insights-link {
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
 .insights-link {
-    color: $communication-shade-10 !important;
+    // marking important to override office fabric style
+    color: $link !important;
     &:hover {
-        color: $communication-shade-30 !important;
+        color: $link-hover;
     }
 }
 
